tracing/jaeger/jaeger-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: tracing
spec:
  type: ClusterIP
  ports:
    - name: thrift-udp
      port: 5775
      targetPort: 5775
    - name: thrift-udp-6831
      port: 6831
      targetPort: 6831
    - name: thrift-udp-6832
      port: 6832
      targetPort: 6832
    - name: http-health
      port: 5778
      targetPort: 5778
    - name: grpc
      port: 14250
      targetPort: 14250
    - name: http-spans
      port: 14268
      targetPort: 14268
    - name: http-ui
      port: 16686
      targetPort: 16686
    - name: otlp
      port: 4317
      targetPort: 4317
  selector:
    app: jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    app: jaeger
  namespace: tracing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.62.0
          ports:
            - containerPort: 4317  # OTLP gRPC
            - containerPort: 5775  # Thrift UDP
            - containerPort: 6831  # Thrift UDP
            - containerPort: 6832  # Thrift UDP
            - containerPort: 5778  # HTTP for health checks
            - containerPort: 14250  # gRPC
            - containerPort: 14268  # HTTP for spans
            - containerPort: 16686  # HTTP for the UI
          args:
            - "--reporter.type=grpc"
            - "--reporter.grpc.host-port=jaeger-collector:14250"
            - "--query.base-path=/jaeger"
